--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-chronobank": "github:chronobank/eslint-plugin-chronobank",
     "middleware-eth-blockprocessor": "github:chronobank/middleware-eth-blockprocessor",
     "mocha": "^3.5.0",
+    "truffle-contract": "^3.0.0",
     "webstomp-client": "^1.0.6",
     "ws": "^3.3.3"
   }
